# rs-swanbar

./: Cargo.toml  LICENSE  README.md  flake.nix  swaybar-config.json
.cargo/: config.toml
src/: handlers.rs  main.rs  types.rs
