[package]
name = "swaybar3"
version = "0.1.0"
edition = "2021"

[dependencies]
swayipc = "3.0.1"
rand = "0.8"
tokio-stream = { version = "0.1.17", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0.140"}
rmp-serde = "1.3.0"
csv = "1.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
clap = {version = "4.5.35", features = ["derive"]}
futures = "0.3"
chrono = "0.4"
byteorder = "1"
anyhow = "1"

[build]
target = "x86_64-unknown-linux-musl"


[profile.release]
debug = false
opt-level = "z"          # Optimize for size instead of speed
lto = true               # Link Time Optimization
codegen-units = 1        # Better LTO at cost of compile time
panic = "abort"          # No stack unwinding logic = smaller binary
strip = true             # (nightly only or do it manually)
